# integration-as-code

./: .gitignore  README.md
.github/reusable-steps/: docker-build.yml
.github/workflows/: docker-build.yml  e2e_pipeline.yml  hash_calculator.yaml  not_test_containers.yml  pytest.yml  test_containers.yml
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  routers.py  settings.py  utils.py
backend/service/: database.py  models.py  schemas.py
backend/src/: __init__.py  main.py  routers.py  utils.py
backend/tests/: run_test.sh
backend/tests/hash_service/: __init__.py
backend/tests/old_approach/: conftest.py  docker-compose.yaml  test_api.py
backend/tests/small/: test_example.py
backend/tests/test_containers/: conftest.py  test_api.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: requests.ts
hash_calculator/: Dockerfile  Makefile  go.mod
hash_calculator/cmd/app/: main.go
